--- a/web_src/css/repo/home.css
+++ b/web_src/css/repo/home.css
@@ -63,6 +63,8 @@
   bottom: 0;
   height: 100%;
   overflow-y: hidden;
+  overflow-x: visible;
+  z-index: 10;
 }
 
 .repo-view-content {
